改变了一下显示圆函数，可以显示完整圆

--- a/oled.ioc
+++ b/oled.ioc
@@ -1,162 +1,187 @@
 #MicroXplorer Configuration settings - do not modify
+File.Version=6
+GPIO.groupedBy=Group By Peripherals
+KeepUserPlacement=false
 Mcu.Family=STM32F1
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-ProjectManager.MainLocation=Core/Src
-RCC.MCOFreq_Value=72000000
-PB10.PinState=GPIO_PIN_SET
-PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
-ProjectManager.ProjectFileName=oled.ioc
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
-ProjectManager.KeepUserCode=true
-PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-Mcu.UserName=STM32F103C8Tx
-Mcu.PinsNb=14
-PB10.GPIO_PuPd=GPIO_PULLUP
-ProjectManager.NoMain=false
-RCC.PLLCLKFreq_Value=72000000
-PB2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM4_Init-TIM4-false-HAL-true
-PB11.GPIO_Label=i2c1_SDA
-RCC.ADCFreqValue=36000000
-ProjectManager.DefaultFWLocation=true
-PB0.GPIO_Label=i2c2_SCL
-PD0-OSC_IN.Signal=RCC_OSC_IN
-PB12.Locked=true
-ProjectManager.DeletePrevious=true
-PB11.GPIO_PuPd=GPIO_PULLUP
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-PB10.Locked=true
-PB11.Signal=GPIO_Output
-PB13.Signal=GPIO_Output
-PB15.Signal=GPXTI15
-PinOutPanel.RotationAngle=0
-RCC.FamilyName=M
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-ProjectManager.StackSize=0x400
-PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PD1-OSC_OUT.Signal=RCC_OSC_OUT
-PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA13.Signal=SYS_JTMS-SWDIO
-RCC.FCLKCortexFreq_Value=72000000
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP2=SYS
-Mcu.IP3=TIM4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.UserConstants=
-VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
-ProjectManager.TargetToolchain=MDK-ARM V5.27
-TIM4.IPParameters=Prescaler,Period
-PB10.GPIO_Label=i2c1_SCL
-PB0.PinState=GPIO_PIN_SET
-Mcu.ThirdPartyNb=0
-PB1.GPIO_PuPd=GPIO_PULLUP
-RCC.HCLKFreq_Value=72000000
+Mcu.IP2=SYS
+Mcu.IP3=TIM4
 Mcu.IPNb=4
-ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=72000000
-PB2.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
-SH.GPXTI12.ConfNb=1
-Mcu.Pin6=PB11
-Mcu.Pin7=PB12
-Mcu.Pin8=PB13
-RCC.USBFreq_Value=72000000
-Mcu.Pin9=PB15
-TIM4.Prescaler=72-1
-RCC.AHBFreq_Value=72000000
-PB13.Locked=true
-PB1.Locked=true
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PB0
-PD0-OSC_IN.Mode=HSE-External-Oscillator
-PB10.Signal=GPIO_Output
-Mcu.Pin3=PB1
-Mcu.Pin4=PB2
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Mcu.Pin5=PB10
-ProjectManager.ProjectBuild=false
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Name=STM32F103C(8-B)Tx
+Mcu.Package=LQFP48
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PB15
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB5
+Mcu.Pin14=PB8
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin3=PB0
+Mcu.Pin4=PB1
+Mcu.Pin5=PB2
+Mcu.Pin6=PB10
+Mcu.Pin7=PB11
+Mcu.Pin8=PB12
+Mcu.Pin9=PB13
+Mcu.PinsNb=18
+Mcu.ThirdPartyNb=0
+Mcu.UserConstants=
+Mcu.UserName=STM32F103C8Tx
+MxCube.Version=6.0.0
+MxDb.Version=DB.6.0.0
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB2.Signal=GPIO_Output
-board=custom
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.LastFirmware=true
-SH.GPXTI12.0=GPIO_EXTI12
-RCC.PLLMUL=RCC_PLL_MUL9
-PB12.GPIO_Label=SENSOR_INT2
-PB13.GPIO_PuPd=GPIO_PULLUP
-RCC.VCOOutput2Freq_Value=8000000
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
-MxDb.Version=DB.5.0.60
-PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
-RCC.APB2Freq_Value=72000000
-PB13.PinState=GPIO_PIN_SET
-ProjectManager.BackupPrevious=false
-MxCube.Version=5.6.1
-PB15.GPIO_Label=SENSOR_INT1
-PB1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA14.Mode=Serial_Wire
-PB1.GPIO_Label=i2c2_SDA
-File.Version=6
-VP_SYS_VS_Systick.Mode=SysTick
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.ForceEnableDMAVector=true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-TIM4.Period=1000-1
-PB15.GPIOParameters=GPIO_Label
-PA13.Mode=Serial_Wire
-ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-ProjectManager.AskForMigrate=true
-Mcu.Name=STM32F103C(8-B)Tx
-ProjectManager.HalAssertFull=false
-PB0.Locked=true
-PB2.GPIO_PuPd=GPIO_PULLUP
-ProjectManager.ProjectName=oled
-ProjectManager.UnderRoot=false
-PB2.Locked=true
-PB1.PinState=GPIO_PIN_SET
-RCC.PLLMCOFreq_Value=36000000
-ProjectManager.CoupleFile=true
-RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Package=LQFP48
-PB1.Signal=GPIO_Output
-RCC.TimSysFreq_Value=72000000
-NVIC.ForceEnableDMAVector=true
-KeepUserPlacement=false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-ProjectManager.CompilerOptimize=6
-ProjectManager.ToolChainLocation=
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-PA14.Signal=SYS_JTCK-SWCLK
-ProjectManager.HeapSize=0x200
-PB11.PinState=GPIO_PIN_SET
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin13=VP_TIM4_VS_ClockSourceINT
-SH.GPXTI15.ConfNb=1
-ProjectManager.ComputerToolchain=false
-VP_TIM4_VS_ClockSourceINT.Mode=Internal
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-SH.GPXTI15.0=GPIO_EXTI15
-Mcu.Pin11=PA14
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin10=PA13
-RCC.APB1TimFreq_Value=72000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-RCC.APB1Freq_Value=36000000
-PB0.Signal=GPIO_Output
-ProjectManager.CustomerFirmwarePackage=
-PB11.Locked=true
-ProjectManager.DeviceId=STM32F103C8Tx
-PB12.GPIOParameters=GPIO_Label
-PB12.Signal=GPXTI12
-ProjectManager.LibraryCopy=1
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
+PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=i2c2_SCL
 PB0.GPIO_PuPd=GPIO_PULLUP
-PB15.Locked=true
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
+PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=i2c2_SDA
+PB1.GPIO_PuPd=GPIO_PULLUP
+PB1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB1.Locked=true
+PB1.PinState=GPIO_PIN_SET
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB10.GPIO_Label=i2c1_SCL
+PB10.GPIO_PuPd=GPIO_PULLUP
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB10.Locked=true
+PB10.PinState=GPIO_PIN_SET
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB11.GPIO_Label=i2c1_SDA
+PB11.GPIO_PuPd=GPIO_PULLUP
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB11.Locked=true
+PB11.PinState=GPIO_PIN_SET
+PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=SENSOR_INT2
+PB12.Locked=true
+PB12.Signal=GPXTI12
+PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB13.GPIO_PuPd=GPIO_PULLUP
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB13.Locked=true
+PB13.PinState=GPIO_PIN_SET
+PB13.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=SENSOR_INT1
+PB15.Locked=true
+PB15.Signal=GPXTI15
+PB2.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB2.GPIO_PuPd=GPIO_PULLUP
+PB2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB5.GPIO_Label=KEY3
+PB5.GPIO_PuPd=GPIO_PULLUP
+PB5.Locked=true
+PB5.Signal=GPIO_Input
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB8.GPIO_Label=KEY2
+PB8.GPIO_PuPd=GPIO_PULLUP
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PB9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB9.GPIO_Label=KEY1
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.Signal=GPIO_Input
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=KEY0
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Input
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+PD0-OSC_IN.Signal=RCC_OSC_IN
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
+PinOutPanel.RotationAngle=0
+ProjectManager.AskForMigrate=true
+ProjectManager.BackupPrevious=false
+ProjectManager.CompilerOptimize=6
+ProjectManager.ComputerToolchain=false
+ProjectManager.CoupleFile=true
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+ProjectManager.DeviceId=STM32F103C8Tx
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
+ProjectManager.FreePins=false
+ProjectManager.HalAssertFull=false
+ProjectManager.HeapSize=0x200
+ProjectManager.KeepUserCode=true
+ProjectManager.LastFirmware=true
+ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Core/Src
+ProjectManager.NoMain=false
+ProjectManager.PreviousToolchain=
+ProjectManager.ProjectBuild=false
+ProjectManager.ProjectFileName=oled.ioc
+ProjectManager.ProjectName=oled
+ProjectManager.RegisterCallBack=
+ProjectManager.StackSize=0x400
+ProjectManager.TargetToolchain=MDK-ARM V5.27
+ProjectManager.ToolChainLocation=
+ProjectManager.UnderRoot=false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM4_Init-TIM4-false-HAL-true
+RCC.ADCFreqValue=36000000
+RCC.AHBFreq_Value=72000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
+RCC.FamilyName=M
+RCC.HCLKFreq_Value=72000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=36000000
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.SYSCLKFreq_VALUE=72000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TimSysFreq_Value=72000000
+RCC.USBFreq_Value=72000000
+RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+TIM4.IPParameters=Prescaler,Period
+TIM4.Period=1000-1
+TIM4.Prescaler=72-1
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+board=custom
